packages/truffle/test/sources/migrations/error/migrations/8_js_error_sync.js
const Example = artifacts.require("Example");

module.exports = function(deployer, network, accounts) {
  deployer.deploy(Hello);
};